# memopad_qt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  backend.cpp  backend.h  main.cpp  main.qml  resources.qrc
